# prefetching

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.sh
notes_dump/: cx21_numa_hardware  jemalloc_with_retain_true.txt  numactl_distand_mem_example.txt  perf_amd_events  slurm_commands
scripts/: config.sh  create_perf_list.sh  delab_benchmark_pipeline.sh  delab_run_benchmark.sh
scripts/github_prefetch_analysis/: load_prefetch_lines.py  resp_10_100.json  resp_1_100.json  resp_2_100.json  resp_3_100.json  resp_4_100.json  resp_5_100.json  resp_6_100.json  resp_7_100.json  resp_8_100.json  resp_9_100.json  result.json  result_grouped.json
src/: CMakeLists.txt  config.cpp
src/benchmark/: CMakeLists.txt  binary_search.cpp  btree_benchmark.cpp  cache_size_nvlink.cpp  cssl.cpp  hash_join.cpp  hashmap_benchmark.cpp  lfb_full_behavior.cpp  lfb_reliability.cpp  lfb_scale_benchmark.cpp  lfb_size_benchmark.cpp  lfb_size_benchmark_smt.cpp  materialization.cpp  memory_latencies.cpp  old_pointer_chasing.cpp  pointer_chasing.cpp  prefetch_latency.cpp  prefetch_locality_behavior.cpp  random_read_benchmark.cpp  rob_pressure.cpp  test_ca_memory_placement.cpp  test_perf.cpp  tree_simulation_benchmark.cpp
src/benchmark/utils/: fujitsu_memory_allocation.hpp  stats.hpp  zipfian_int_distribution.hpp
src/lib/: CMakeLists.txt  coroutine.hpp  hashmap.cpp  hashmap.hpp  prefetching.cpp  prefetching.hpp  random_access.cpp  random_access.hpp  skiplist.cpp  skiplist.hpp  types.hpp
src/lib/BTree/: btree_olc.h  btree_vectorized_helper.h  builtin.h  coro.h  coro_base_btree_olc.h  coro_btree_olc.h  coro_btree_olc_optimized.h  coro_lines_btree_olc.h  prefetch.h
src/lib/BinarySearch/: coro.h  coro_infra.h  naive.h  rng.h  sm.h  source.txt
src/lib/HashJoin/: CMakeLists.txt  README.md  affinity.h  barrier.h  config.h  generator.c  generator.h  lock.h  no_partitioning_join.h  npj2epb.c  npj_params.h  npj_types.h  types.h
src/lib/numa/: CMakeLists.txt  interleaving_numa_memory_resource.cpp  interleaving_numa_memory_resource.hpp  numa_manager.cpp  numa_manager.hpp  numa_memory_resource.cpp  numa_memory_resource.hpp  numa_memory_resource_no_jemalloc.cpp  numa_memory_resource_no_jemalloc.hpp  static_numa_memory_resource.cpp  static_numa_memory_resource.hpp
src/lib/profiling/: CMakeLists.txt  perf_manager.cpp  perf_manager.hpp
src/lib/utils/: CMakeLists.txt  profiler.cpp  runtime_config.cpp  runtime_config.hpp  simple_continuous_allocator.cpp  simple_continuous_allocator.hpp  singleton.hpp  utils.cpp  utils.hpp
src/perf_configs/: README.md
src/perf_configs/generic_selections/: AMD1.csv  AMD2.csv  ARM1.csv  ARM2.csv  INTEL1.csv  INTEL2.csv  INTEL3.csv
src/perf_configs/orginally_generated/: AMD1.csv  AMD2.csv  ARM1.csv  ARM2.csv  INTEL1.csv  INTEL2.csv  INTEL3.csv
src/test/: CMakeLists.txt  test_coroutine_thread_switching.cpp  test_mab_allocs.cpp  test_memory_allocator_pmr.cpp
visualization/: binary_search_local_remote.py  btree_benchmark.py  btree_benchmark_distributions.py  btree_benchmark_local_remote.py  config.py  full_lfb_behavior.py  hash_join.py  helper.py  lfb_size.py  materialization.py  memory_latencies.py  prefetch_latencies.py  prefetch_locality_behavior.py
visualization/MT_final/: binary_search.py  binary_search_distribution.py  btree.py  btree_distribution.py  btree_distribution_two_rows.py  btree_large_nodes.py  compare_memory_latencies.py  fujitsu_tlb_issue.py  hash_join.py  import_helper.py  lfb_reliability.py  lfb_reliability_paper.py  lfb_reliability_weak.py  local_memory_latencies.py  materialization.py  numa_latencies_heatmaps.py  paper_first_page.py  paper_first_page_dots.py  prefetch_locality_behavior.py  prefetch_locality_behavior_two_columns.py  prefetch_usage.py  rob_pressure.py  rob_pressure_analysis_weak_drop.py  rob_pressure_camel.py
